# TensorFlow-Examples

./: README.md
C++/: .gitignore
C++/Example_01/Hello_TensorFlow/: CMakeLists.txt  Hello_TensorFlow.pro  main.cpp  main.qml  tensorclient.cpp  tensorclient.h
C++/Example_02/Hello_TensorFlow/: qml.qrc
C++/Example_02/TF_Example/: CMakeLists.txt  example.cpp
Example_02/: example_02.py
Example_03/: example_03.py
Python/Example_02/: example_02.py
Python/Example_04/: example_04.py  example_04_10.py  example_04_11.py  example_04_2.py  example_04_3.py  example_04_4.py  example_04_5.py  example_04_6.py  example_04_7.py  example_04_8.py  example_04_9.py  example_05_5.py
